Add annotation support for sql annotations in generate command